# CPU_SIM

./: .gitignore  ALU.cpp  ALU.h  BRANCH_PREDICTORS.md  BranchPredictor.h  BranchPredictorScheme.h  CACHE_SCHEMES.md  CMakeLists.txt  CPU.cpp  CPU.h  Cache.h  CacheScheme.h  MemoryIf.h  README.md  cpusim.cpp  test_c_and_decode.cpp
assembly_translations/: all.txt  r.txt  rv32i.txt  rv32imcf.txt
gui/: COMPILE_FIXES.md  DependencyWidget.cpp  DependencyWidget.h  MainWindow.cpp  MainWindow.h  MemoryWidget.cpp  MemoryWidget.h  PipelineWidget.cpp  PipelineWidget.h  RegisterWidget.cpp  RegisterWidget.h  SimulatorController.cpp  SimulatorController.h  StatsWidget.cpp  StatsWidget.h  main.cpp
instruction_memory/: instMem-all.txt  instMem-rv32i.txt  instMem-rv32imcf.txt
